--- a/src/SIGN_UP.form
+++ b/src/SIGN_UP.form
@@ -124,7 +124,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="TH SarabunPSK" size="24" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Enter Name"/>
+            <Property name="text" type="java.lang.String" value="Enter Shop Name"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="Enter_Username">
