--- a/src/HOME_JFrame.form
+++ b/src/HOME_JFrame.form
@@ -66,15 +66,14 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                               <Component id="jLabel2" min="-2" pref="115" max="-2" attributes="0"/>
-                              <EmptySpace pref="604" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="cash_btn" min="-2" pref="200" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="117" max="-2" attributes="0"/>
                               <Component id="editMenu_btn" min="-2" pref="200" max="-2" attributes="0"/>
-                              <EmptySpace pref="247" max="32767" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace pref="247" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -169,6 +168,9 @@
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="40" green="d2" red="fb" type="rgb"/>
             </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/image_8_1.png"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cash_btnActionPerformed"/>
@@ -187,6 +189,9 @@
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="40" green="d2" red="fb" type="rgb"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/image_7_1.png"/>
             </Property>
           </Properties>
           <Events>
